--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="previous-operand"></div>
                 <div class="current-operand"></div>
             </div>
-            <button class="span-two">AC</button>
+            <button class="span-two" id="ac">AC</button>
             <button>DEL</button>
             <button>÷</button>
             <button>1</button>
